# Examples

lite/examples/image_segmentation/android/: build.gradle
lite/examples/image_segmentation/android/app/: build.gradle
lite/examples/image_segmentation/android/app/src/main/java/org/tensorflow/lite/examples/imagesegmentation/: MainActivity.kt
lite/examples/image_segmentation/android/app/src/main/res/layout/: tfe_is_bottom_sheet_layout.xml
lite/examples/image_segmentation/android/app/src/main/res/values/: strings.xml
lite/examples/image_segmentation/android/lib_interpreter/: build.gradle
lite/examples/image_segmentation/android/lib_interpreter/src/main/cpp/: CMakeLists.txt  TensorflowRunner.cc  TensorflowRunner.h  TensorflowRunnerJNI.cpp  TensorflowRunnerJNI.h  tflite_gpu_runner.cc  tflite_gpu_runner.h  tflite_model_loader.cc  tflite_model_loader.h
lite/examples/image_segmentation/android/lib_interpreter/src/main/java/org/tensorflow/lite/examples/imagesegmentation/tflite/: GLHelper.java  ImageSegmentationModelExecutor.kt  ImageSegmentationModelExecutorGPUPass.kt  OpenGLContext.java  TensorflowRunner.java
lite/examples/image_segmentation/android/lib_task_api/: build.gradle
lite/examples/image_segmentation/android/lib_utils/: build.gradle
